#1184 - Nick - Fixing badge alignment on IE

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_refineBar.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_refineBar.scss
@@ -326,6 +326,7 @@
             height: 30px;
             align-items: center;
             justify-content: center;
-            display: flex;
+            display: inline-block;
+            text-align: center;
         }
     }
